--- a/app/permalink/package.json
+++ b/app/permalink/package.json
@@ -27,5 +27,13 @@
     "@nextcloud/webpack-vue-config": "^6.0.1",
     "eslint-webpack-plugin": "^4.1.0",
     "stylelint-webpack-plugin": "^5.0.0"
-  }
+  },
+  "description": "A template to get started with Nextcloud app development.",
+  "main": ".eslintrc.js",
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": ""
 }
