basic post request in controller

--- a/app/permalink/package.json
+++ b/app/permalink/package.json
@@ -17,15 +17,20 @@
     "extends @nextcloud/browserslist-config"
   ],
   "dependencies": {
+    "@nextcloud/axios": "^2.5.1",
     "@nextcloud/vue": "^8.11.2",
-    "vue": "^2.7.16"
+    "vue": "^2.7.16",
+    "vue-loader": "^17.4.2"
   },
   "devDependencies": {
     "@nextcloud/browserslist-config": "^3.0.1",
     "@nextcloud/eslint-config": "^8.3.0",
     "@nextcloud/stylelint-config": "^2.4.0",
     "@nextcloud/webpack-vue-config": "^6.0.1",
+    "css-loader": "^7.1.2",
     "eslint-webpack-plugin": "^4.1.0",
-    "stylelint-webpack-plugin": "^5.0.0"
+    "style-loader": "^4.0.0",
+    "stylelint-webpack-plugin": "^5.0.0",
+    "vue-style-loader": "^4.1.3"
   }
 }
