--- a/app/permalink/package.json
+++ b/app/permalink/package.json
@@ -23,13 +23,13 @@
         "lint": "eslint --ext .js,.vue src",
         "lint:fix": "eslint --ext .js,.vue src --fix",
         "stylelint": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue",
-        "stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
+        "stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix",
+        "build-translations": "nextcloud-l10n"
     },
     "dependencies": {
         "@nextcloud/auth": "^2.4.0",
         "@nextcloud/axios": "^2.5.1",
         "@nextcloud/dialogs": "^6.1.1",
-        "@nextcloud/l10n": "^3.1.0",
         "@nextcloud/router": "^3.0.1",
         "@nextcloud/sharing": "^0.2.4",
         "@nextcloud/vue": "^8.26.0",
@@ -47,6 +47,7 @@
         "@nextcloud/babel-config": "^1.2.0",
         "@nextcloud/browserslist-config": "^3.0.1",
         "@nextcloud/eslint-config": "^8.4.1",
+        "@nextcloud/l10n": "^3.2.0",
         "@nextcloud/prettier-config": "^1.1.0",
         "@nextcloud/stylelint-config": "^3.0.1",
         "@nextcloud/vite-config": "^1.4.2",
