--- a/permalink/package.json
+++ b/permalink/package.json
@@ -44,6 +44,8 @@
         "npm": "^10"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.27.0",
         "@nextcloud/babel-config": "^1.2.0",
         "@nextcloud/browserslist-config": "^3.0.1",
         "@nextcloud/eslint-config": "^8.4.1",
