--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "@nextcloud/sharing": "^0.2.4",
         "@nextcloud/vue": "^8.26.0",
         "vue": "^2.7.16",
-        "vue-material-design-icons": "^5.3.1"
+        "vue-material-design-icons": "^5.3.1",
+        "vue-template-compiler": "^2.7.16"
     },
     "browserslist": [
         "extends @nextcloud/browserslist-config"
@@ -52,12 +53,12 @@
         "@nextcloud/l10n": "^3.2.0",
         "@nextcloud/prettier-config": "^1.1.0",
         "@nextcloud/stylelint-config": "^3.0.1",
-        "@nextcloud/vite-config": "^2.3.5",
+        "@nextcloud/vite-config": "^1.4.2",
         "@vue/tsconfig": "^0.5.1",
         "esbuild": "^0.25.5",
         "eslint-config-prettier": "^10.1.1",
         "prettier": "^3.5.3",
-        "vite": "^6.3.5",
+        "vite": "^5.4.19",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-stylelint": "^6.0.0"
     }
