--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@nextcloud/router": "^3.0.1",
         "@nextcloud/sharing": "^0.2.4",
         "@nextcloud/vue": "^8.26.0",
+        "eslint-plugin-import": "^2.31.0",
         "vue": "^2.7.16",
         "vue-material-design-icons": "^5.3.1",
         "vue-template-compiler": "^2.7.16"
@@ -54,8 +55,10 @@
         "@nextcloud/prettier-config": "^1.1.0",
         "@nextcloud/stylelint-config": "^3.0.1",
         "@nextcloud/vite-config": "^1.4.2",
+        "@typescript-eslint/eslint-plugin": "^8.33.1",
         "@vue/tsconfig": "^0.5.1",
         "esbuild": "^0.25.5",
+        "eslint": "^8.49.0",
         "eslint-config-prettier": "^10.1.1",
         "prettier": "^3.5.3",
         "vite": "^5.4.19",
