--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
         "@nextcloud/prettier-config": "^1.1.0",
         "@nextcloud/stylelint-config": "^3.0.1",
         "@nextcloud/vite-config": "^1.4.2",
+        "@typescript-eslint/eslint-plugin": "^8.35.0",
+        "@typescript-eslint/parser": "^8.35.0",
         "@vue/tsconfig": "^0.5.1",
         "esbuild": "^0.25.5",
         "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-import": "^2.32.0",
         "prettier": "^3.5.3",
         "vite": "^5.4.19",
         "vite-plugin-eslint": "^1.8.1",
