--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "@nextcloud/l10n": "^3.2.0",
         "@nextcloud/prettier-config": "^1.1.0",
         "@nextcloud/stylelint-config": "^3.0.1",
-        "@nextcloud/vite-config": "^1.4.2",
+        "@nextcloud/vite-config": "^1.6.0",
         "@typescript-eslint/eslint-plugin": "^8.35.0",
         "@typescript-eslint/parser": "^8.35.0",
         "@vue/tsconfig": "^0.5.1",
@@ -61,7 +61,8 @@
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-import": "^2.32.0",
         "prettier": "^3.5.3",
-        "vite": "^5.4.19",
+        "typescript": "~5.3.3",
+        "vite": "^5.4.21",
         "vite-plugin-eslint": "^1.8.1",
         "vite-plugin-stylelint": "^6.0.0"
     }
